# quickcheck-richderive

./: CHANGELOG.md  Cargo.toml  README.md
src/: attrs.rs  codegen.rs  lib.rs
src/test_attr/: codegen.rs  mod.rs  parse.rs
tests/: box_path.rs  container_with.rs  enums.rs  generics.rs  hygiene.rs  structs.rs  test_attr.rs  with_mod.rs
tests/ui/: all_variants_skipped.stderr  container_with_and_arbitrary.rs  container_with_and_arbitrary.stderr  container_with_and_shrink.rs  container_with_and_shrink.stderr  container_with_bogus_field.rs  container_with_bogus_field.stderr  field_default_and_with.stderr  field_with_and_arbitrary.rs  field_with_and_arbitrary.stderr  test_attr_async_fn.rs  test_attr_async_fn.stderr  test_attr_duplicate_key.rs  test_attr_duplicate_key.stderr  test_attr_override_unknown_arg.rs  test_attr_override_unknown_arg.stderr  test_attr_strategy_on_pattern.rs  test_attr_strategy_on_pattern.stderr  test_attr_unknown_reserved_key.rs  test_attr_unknown_reserved_key.stderr  test_attr_wrong_literal_type.rs  test_attr_wrong_literal_type.stderr  unknown_container_attr.stderr  unknown_field_attr.stderr  unknown_variant_attr.stderr  variant_with_conflicting_field.rs  variant_with_conflicting_field.stderr
