[package]
name = "quickcheck-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
repository = "https://github.com/al8n/quickcheck-derive"
homepage = "https://github.com/al8n/quickcheck-derive"
documentation = "https://docs.rs/quickcheck-derive"
description = "A `#[derive(Arbitrary)]` proc-macro emitting native `quickcheck::Arbitrary` impls (arbitrary + shrink)."
license = "MIT OR Apache-2.0"
keywords = ["quickcheck", "arbitrary", "derive", "testing", "fuzzing"]
categories = ["development-tools::testing", "rust-patterns"]

[lib]
name = "quickcheck_derive"
proc-macro = true

[features]
default = ["std"]
# Generated `shrink` returns `::std::boxed::Box<dyn Iterator<…>>`.
std = []
# no-std: generated `shrink` returns `::alloc::boxed::Box<dyn Iterator<…>>`
# instead. (A container `#[quickcheck(box = "…")]` overrides either default.)
alloc = []

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
quickcheck = "1"
trybuild = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
