[package]
name = "quickcheck-richderive"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/al8n/quickcheck-richderive"
homepage = "https://github.com/al8n/quickcheck-richderive"
documentation = "https://docs.rs/quickcheck-richderive"
description = "A `#[derive(Arbitrary)]` proc-macro emitting native `quickcheck::Arbitrary` impls (arbitrary + shrink)."
license = "MIT OR Apache-2.0"
keywords = ["quickcheck", "quickcheck-derive", "arbitrary", "testing", "fuzzing"]
categories = ["development-tools::testing", "rust-patterns"]

[lib]
proc-macro = true

[features]
default = ["std"]
# Generated `shrink` returns `::std::boxed::Box<dyn Iterator<…>>`.
std = []
# no-std: generated `shrink` returns `::alloc::boxed::Box<dyn Iterator<…>>`
# instead. (A container `#[quickcheck(box = "…")]` overrides either default.)
alloc = []

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
quickcheck = "1"
trybuild = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
